kubernetes/netbox/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app-ingress: ""
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    app.kubernetes.io/instance: netbox
    kubernetes.io/metadata.name: netbox
    ca-bundle: "true"
  name: netbox
