kubernetes/netbox/base/deployment.yaml
---
# Source: netbox/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_43=Don't Mind Tag for This
  namespace: "netbox"
  labels:
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbox
    app.kubernetes.io/version: v4.0.0
    helm.sh/chart: netbox-5.0.0-beta9
    app.kubernetes.io/component: netbox
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: netbox
      app.kubernetes.io/instance: netbox
      app.kubernetes.io/component: netbox
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbox
        app.kubernetes.io/instance: netbox
        app.kubernetes.io/component: netbox
    spec:
      serviceAccountName: netbox-sa
      automountServiceAccountToken: false
      restartPolicy: Default
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/component: netbox
                  app.kubernetes.io/instance: netbox
                  app.kubernetes.io/name: netbox
              topologyKey: kubernetes.io/hostname
      containers:
        - name: netbox
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/netbox-community/netbox:v4.4.6@sha256:150fb9808d633712a75ad57ba364fa38caab3a88d123c470967fd3b9b2f32d9c"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: nginx-status
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
            httpGet:
              path: /status/applications/netbox/processes/running
              port: nginx-status
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
            httpGet:
              path: /login/
              port: http
          startupProbe:
            failureThreshold: 10
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
            httpGet:
              path: /login/
              port: http
          volumeMounts:
            - name: config
              mountPath: /etc/netbox/config/configuration.py
              subPath: configuration.py
              readOnly: true
            - name: config
              mountPath: /run/config/netbox
              readOnly: true
            - name: secrets
              mountPath: /run/secrets/netbox
              readOnly: true
            - name: netbox-tmp
              mountPath: /tmp
            - name: media
              mountPath: /opt/netbox/netbox/media
              subPath: ""
            - name: optunit
              mountPath: /opt/unit
            - name: secrets
              mountPath: /run/secrets/superuser_password
              subPath: superuser_password
              readOnly: true
            - name: secrets
              mountPath: /run/secrets/superuser_api_token
              subPath: superuser_api_token
              readOnly: true
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          resources:
            limits:
              cpu: 1
              ephemeral-storage: 1024Mi
              memory: 2Gi
            requests:
              cpu: 5m
              ephemeral-storage: 50Mi
              memory: 768Mi
      volumes:
        - name: config
          secret:
            secretName: netbox-config
        - name: secrets
          projected:
            sources:
              - secret:
                  name: "netbox-creds"
                  items:
                    # Used by netbox-docker entry scripts
                    - key: superuser_password
                      path: superuser_password
                    - key: superuser_api_token
                      path: superuser_api_token
                    # Used by our configuration
                    - key: email_password
                      path: email_password
                    - key: secret_key
                      path: secret_key
              - secret:
                  name: "netbox-app"
                  items:
                    - key: "password"
                      path: db_password
              - secret:
                  name: "netbox-creds"
                  items:
                    - key: "redis_tasks_password"
                      path: redis_tasks_password
              - secret:
                  name: "netbox-creds"
                  items:
                    - key: "redis_cache_password"
                      path: redis_cache_password
        - name: netbox-tmp
          emptyDir:
            medium: Memory
        - name: optunit
          emptyDir:
            medium: Memory
        - name: media
          emptyDir: {}
      enableServiceLinks: false
---
# Source: netbox/templates/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-worker
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
  namespace: "netbox"
  labels:
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbox
    app.kubernetes.io/version: v4.0.0
    helm.sh/chart: netbox-5.0.0-beta9
    app.kubernetes.io/component: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: netbox
      app.kubernetes.io/instance: netbox
      app.kubernetes.io/component: worker
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbox
        app.kubernetes.io/instance: netbox
        app.kubernetes.io/component: worker
    spec:
      serviceAccountName: netbox-sa
      automountServiceAccountToken: false
      restartPolicy: Default
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/component: worker
                  app.kubernetes.io/instance: netbox
                  app.kubernetes.io/name: netbox
              topologyKey: kubernetes.io/hostname
      containers:
        - name: netbox-worker
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/netbox-community/netbox:v4.4.6@sha256:150fb9808d633712a75ad57ba364fa38caab3a88d123c470967fd3b9b2f32d9c"
          command:
            - /opt/netbox/venv/bin/python
            - /opt/netbox/netbox/manage.py
            - rqworker
          imagePullPolicy: IfNotPresent
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          resources:
            limits:
              cpu: 100m
              ephemeral-storage: 1024Mi
              memory: 512Mi
            requests:
              cpu: 5m
              ephemeral-storage: 50Mi
              memory: 192Mi
          volumeMounts:
            - name: config
              mountPath: /etc/netbox/config/configuration.py
              subPath: configuration.py
              readOnly: true
            - name: config
              mountPath: /run/config/netbox
              readOnly: true
            - name: secrets
              mountPath: /run/secrets/netbox
              readOnly: true
            - name: netbox-tmp
              mountPath: /tmp
            - name: media
              mountPath: /opt/netbox/netbox/media
              subPath: ""
      volumes:
        - name: config
          secret:
            secretName: netbox-config
        - name: secrets
          projected:
            sources:
              - secret:
                  name: "netbox-creds"
                  items:
                    # Used by our configuration
                    - key: email_password
                      path: email_password
                    - key: secret_key
                      path: secret_key
              - secret:
                  name: "netbox-app"
                  items:
                    - key: "password"
                      path: db_password
              - secret:
                  name: "netbox-creds"
                  items:
                    - key: "redis_tasks_password"
                      path: redis_tasks_password
              - secret:
                  name: "netbox-creds"
                  items:
                    - key: "redis_cache_password"
                      path: redis_cache_password
        - name: netbox-tmp
          emptyDir:
            medium: Memory
        - name: media
          emptyDir: {}
      enableServiceLinks: false
