kubernetes/netbox/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: "netbox"
  annotations:
    route.openshift.io/termination: edge
  labels:
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbox
    app.kubernetes.io/version: v4.0.0
    helm.sh/chart: netbox-5.0.0-beta9
spec:
  ingressClassName: openshift-default
  rules:
    - host: "netbox.apps.okd.arthurvardevanyan.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbox
                port:
                  name: http
